Fixing top save button not showing.

--- a/WebContent/stylesheets/custom.css
+++ b/WebContent/stylesheets/custom.css
@@ -1,5 +1,5 @@
 body { 
-	padding-top: 225px; 
+	padding-top: 290px; 
 	
 	font-family: 'Source Sans Pro';
 	font-size: 14px;
